unpackaged/main/default/objects/Final_Value_Fee_FVF__c/Final_Value_Fee_FVF__c.object-meta.xml
<CustomObject>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <label>Final Value Fee (FVF)</label>
    <nameField>
        <displayFormat>FVF-{000000}</displayFormat>
        <label>Final Value Fee ID (External ID)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Value Fee (FVF)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>