unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms__c</fullName>
    <description>EPH-7611 New fields in FVF record</description>
    <inlineHelpText>Please fill out additional terms that you want to include as a part of the contract</inlineHelpText>
    <label>Additional Terms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>