unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>[#EPH-7104] New Permission Set_ Final Value Fee Approval</description>
    <label>Approval Comments</label>
    <type>TextArea</type>
</CustomField>