unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Average_Price_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Average_Price_Reduction__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <label>Average Price Reduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>