unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Budget_estimated_w__c.field-meta.xml
<CustomField>
    <fullName>Budget_estimated_w__c</fullName>
    <description>EPH-7295 New object: Final Value Fee (FVF). Record Type - &quot;Listing Level&quot;</description>
    <label>Budget (Automatically Estimated)</label>
    <summarizedField>Nominated_Item__c.Estimated_Budget_w__c</summarizedField>
    <summaryForeignKey>Nominated_Item__c.Final_Value_Fee_FVF__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>