unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Budget_Manually_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Budget_Manually_Estimated__c</fullName>
    <description>EPH-7611 New fields in FVF record</description>
    <label>Budget (Manually Estimated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>