unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Business_Reason__c.field-meta.xml
<CustomField>
    <fullName>Business_Reason__c</fullName>
    <description>US-0006888: Specify Business Reason for FVF</description>
    <inlineHelpText>Please provide the business reason and the expected outcome of this campaign. What kind of inventory is targeted and how you would define the current business relationship to the seller.</inlineHelpText>
    <label>Business Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>