unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>US-0015762 New Field in the ETL flow.FVF</description>
    <inlineHelpText>Please give a name to your Final Value Fee campaign.</inlineHelpText>
    <label>Campaign Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>