unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(EPH-7591)</description>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Final Value Fee (FVF)</relationshipLabel>
    <relationshipName>Final_Value_Fee_FVF</relationshipName>
    <type>Lookup</type>
</CustomField>