unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Contract_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accept_Date__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <inlineHelpText>Date when seller has signed the FVF discount contract.</inlineHelpText>
    <label>Contract Accept Date</label>
    <type>DateTime</type>
</CustomField>