unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Contract_Accepted_From__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accepted_From__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level
Adjust Help text:
EPH-7611 New fields in FVF record</description>
    <inlineHelpText>IP Address of the place from where the contract was sent</inlineHelpText>
    <label>Contract Accepted From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>