unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Contract_Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Declined_Date__c</fullName>
    <description>US-0009242 - FVF : new stage and fields for seller declining promo</description>
    <inlineHelpText>Date when seller has declined the FVF discount contract.</inlineHelpText>
    <label>Contract Declined Date</label>
    <type>DateTime</type>
</CustomField>