unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Contract_Sender__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008508 - UK FVF (Seller level) add more recipient to contract signed email notification</description>
    <inlineHelpText>Current user who changes stage to Contract Send</inlineHelpText>
    <label>Contract Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Final_Value_Fee_FVF1</relationshipName>
    <type>Lookup</type>
</CustomField>