unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Days_of_FVF_Discount_Period__c.field-meta.xml
<CustomField>
    <fullName>Days_of_FVF_Discount_Period__c</fullName>
    <description>EPH-7295 New object: Final Value Fee (FVF). Record Type - &quot;Listing Level&quot;</description>
    <formula>IF(
  (End_Date_w__c - Start_Date_w__c) &lt; 0, NULL,
   (End_Date_w__c - Start_Date_w__c)  + 1
)</formula>
    <label>Days of FVF Discount Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>