unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Days_since_Final_Value_Fee_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Final_Value_Fee_End_Date__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <formula>IF(
  ( TODAY() - End_Date_w__c) &lt; 0, NULL,
   TODAY() - End_Date_w__c
)</formula>
    <label>Days since Final Value Fee End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>