unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Discount_FVF__c.field-meta.xml
<CustomField>
    <fullName>Discount_FVF__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <inlineHelpText>Percentage reduction on the FVF that will be granted to the seller. 
E.g. Reduction from 10% to 7% is a 30% percentage reduction</inlineHelpText>
    <label>Discount (FVF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>