unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Discount_Price_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Discount_Price_Reduction__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <inlineHelpText>Optional: Reduction on the FVF. E.g. Reduction from 9% to 4.5% is a reduction of 4.5%</inlineHelpText>
    <label>Discount (Price Reduction)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>