unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/End_Date_w__c.field-meta.xml
<CustomField>
    <fullName>End_Date_w__c</fullName>
    <description>EPH-7611 New fields in FVF record</description>
    <inlineHelpText>End Date of the Final Value Fee Discount Incentive</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>