unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;23:59:00.000&quot;)</defaultValue>
    <description>EPH-7611 New fields in FVF record</description>
    <inlineHelpText>End Time of the Final Value Fee Discount Incentive</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>