unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Final_Value_Fee_Stage__c.field-meta.xml
<CustomField>
    <fullName>Final_Value_Fee_Stage__c</fullName>
    <defaultValue>&quot;Draft&quot;</defaultValue>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <label>Final Value Fee Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Sent_to_eBay_Approval</fullName>
                <label>Sent to eBay Approver</label>
            </value>
            <value>
                <fullName>eBay Approved</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Contract Declined</fullName>
            </value>
            <value>
                <fullName>Running Contract</fullName>
            </value>
            <value>
                <fullName>Executed Contract</fullName>
            </value>
            <value>
                <fullName>Statement Sent to Seller</fullName>
            </value>
            <value>
                <fullName>Ready for Payment</fullName>
            </value>
            <value>
                <fullName>Payment Sent</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Running Campaign</fullName>
            </value>
            <value>
                <fullName>Executed Campaigns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>