unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Free_shipping__c.field-meta.xml
<CustomField>
    <fullName>Free_shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0015762 New Field in the ETL flow.FVF</description>
    <inlineHelpText>By clicking this checkbox you are making it mandatory for the seller to sell items with free shipping in order to receive a FVF discount.</inlineHelpText>
    <label>Free shipping required</label>
    <type>Checkbox</type>
</CustomField>