unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/From_System__c.field-meta.xml
<CustomField>
    <fullName>From_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008562 - [UK] FVF (seller level) enhancements</description>
    <label>From System</label>
    <type>Checkbox</type>
</CustomField>