unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/FVF_Campaign__c.field-meta.xml
<CustomField>
    <fullName>FVF_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0006963 FVF. Campaign</description>
    <label>FVF Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Final_Value_Fee_FVF__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>FVF (Campaign)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Final_Value_Fee_FVF__c</referenceTo>
    <relationshipLabel>Final Value Fee (FVF)</relationshipLabel>
    <relationshipName>Final_Value_Fee_FVF</relationshipName>
    <type>Lookup</type>
</CustomField>