unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/GMV_FVF_Price__c.field-meta.xml
<CustomField>
    <fullName>GMV_FVF_Price__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <inlineHelpText>GMV (USD) generated in total during the timeframe of the negotiated contract. Included only items that met the FVF criteria (transactions with lower or equal target price and free shipping condition). Returns and cancellations are INCLUDED.</inlineHelpText>
    <label>GMV (Criteria Met)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>