unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/GMV_Payout__c.field-meta.xml
<CustomField>
    <fullName>GMV_Payout__c</fullName>
    <description>US-0006963 FVF. Campaign</description>
    <inlineHelpText>GMV (USD) generated in total during the timeframe of the negotiated contract. Included only items that met the FVF criteria (transactions with lower or equal target price and free shipping condition). Returns and cancellations are EXCLUDED.</inlineHelpText>
    <label>GMV (Payout)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>