unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/GMV_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>GMV_Target_Price__c</fullName>
    <description>EPH-7611 New fields in FVF record</description>
    <label>GMV (&gt; Target Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>