unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/GMV_Total__c.field-meta.xml
<CustomField>
    <fullName>GMV_Total__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <inlineHelpText>GMV (USD) generated in total during the timeframe of the negotiated contract, irrespective of the price, returns or cancellations.</inlineHelpText>
    <label>GMV (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>