unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/iGMV__c.field-meta.xml
<CustomField>
    <fullName>iGMV__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <label>iGMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>