unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Legal_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Country__c</fullName>
    <description>US-0015720 User Story
FVF. New fields</description>
    <label>Legal Entity Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>