unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <formula>Seller_Name__r.EBH_OracleID__c</formula>
    <label>Oracle ID</label>
    <type>Text</type>
</CustomField>