unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Parent_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Legal_Entity__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <formula>Seller_Name__r.EBH_ParentAccount__c</formula>
    <label>Parent Legal Entity</label>
    <type>Text</type>
</CustomField>