unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Primary_Site__c.field-meta.xml
<CustomField>
    <fullName>Primary_Site__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <formula>TEXT(Seller_Name__r.EBH_PrimarySite__c)</formula>
    <label>Primary Site</label>
    <type>Text</type>
</CustomField>