unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Promotions_T_Cs_agreed_DE_only__c.field-meta.xml
<CustomField>
    <fullName>Promotions_T_Cs_agreed_DE_only__c</fullName>
    <description>US-0015720 User Story
FVF. New fields</description>
    <formula>TEXT( Seller_Name__r.EBH_DealsProgram__c )</formula>
    <inlineHelpText>Has seller agreed to T&amp;C at the Growth Portal?
Prerequisite for the FVF promo. 
Only DE relevant.</inlineHelpText>
    <label>Promotions T&amp;Cs agreed (DE only)</label>
    <type>Text</type>
</CustomField>