unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <description>[#EPH-7104] New Permission Set_ Final Value Fee Approval</description>
    <label>Rejected Date</label>
    <type>DateTime</type>
</CustomField>