unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Reminder_Email_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Send_Date__c</fullName>
    <description>US-0006841 Chase Email for FVF &amp; Compliance contract send date email</description>
    <label>Reminder Email Send Date</label>
    <type>Date</type>
</CustomField>