unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Final_Value_Fee_FVF</relationshipName>
    <type>Lookup</type>
</CustomField>