unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Rev_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Rev_RollUp__c</fullName>
    <description>EPH-7767 FVF Approval Process</description>
    <formula>TEXT(Seller_Name__r.EBH_RevRollup__c)</formula>
    <label>Rev RollUp</label>
    <type>Text</type>
</CustomField>