unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Seller_Email__c.field-meta.xml
<CustomField>
    <fullName>Seller_Email__c</fullName>
    <description>EPH-7611 New fields in FVF record</description>
    <inlineHelpText>Email address of the contact person to whom FVF contract will be sent As a default HIVE will populate this field with primary email address of the contact person that was specified.</inlineHelpText>
    <label>Seller Email</label>
    <type>Email</type>
</CustomField>