unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <label>Seller Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_Seller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Final Value Fee (FVF)</relationshipLabel>
    <relationshipName>Final_Value_Fee_FVF</relationshipName>
    <type>Lookup</type>
</CustomField>