unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Seller_to_Product_IDS__c.field-meta.xml
<CustomField>
    <fullName>Seller_to_Product_IDS__c</fullName>
    <description>EPH-7267 New Object: Nominated Items &amp; Nominate for FVF Discount:
to store seller to product selected</description>
    <label>Seller to Product IDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>