unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>US-0006963 FVF. Campaign</description>
    <inlineHelpText>Please specify the primary site for the Campaign. 
Based on this value Camopaign will be approved by diffrent stakeholders</inlineHelpText>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>