unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Sold_Items_Payout__c.field-meta.xml
<CustomField>
    <fullName>Sold_Items_Payout__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <inlineHelpText>Sold Items during the timeframe of the negotiated contract. Included only items that met the FVF criteria (transactions with lower or equal target price and free shipping condition). Returns and cancellations are EXCLUDED.</inlineHelpText>
    <label>Sold Items (Payout)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>