unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Sold_Items_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Sold_Items_Target_Price__c</fullName>
    <description>EPH-7611 New fields in FVF record</description>
    <label>Sold Items (&gt; Target Price)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>