unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Sold_Items_Total__c.field-meta.xml
<CustomField>
    <fullName>Sold_Items_Total__c</fullName>
    <description>EPH-7355 New object: Final Value Fee (FVF). Record Type - Seller Level</description>
    <inlineHelpText>Sold Items during the timeframe of the negotiated contract, irrespective of the price, returns or cancellations.</inlineHelpText>
    <label>Sold Items (Total)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>