unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;08:00:00.000&quot;)</defaultValue>
    <description>EPH-7611 New fields in FVF record</description>
    <inlineHelpText>Start Time of the Final Value Fee Discount Incentive</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>