unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Status_Field_Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Status_Field_Previous_Value__c</fullName>
    <defaultValue>true</defaultValue>
    <description>US-0007278 - [FVF Campaign] Status Change 2
US-0007361 - FVF Campaign Status change BUG</description>
    <label>Status Field Previous Value</label>
    <type>Checkbox</type>
</CustomField>