unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Total_Number_of_Listings__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Listings__c</fullName>
    <description>EPH-7295 New object: Final Value Fee (FVF). Record Type - &quot;Listing Level&quot;</description>
    <inlineHelpText>Total Number of listings that are a part of the Final Value Fee Promotion</inlineHelpText>
    <label>Total Number of Listings</label>
    <summaryForeignKey>Nominated_Item__c.Final_Value_Fee_FVF__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>