unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Total_Number_of_Sellers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Sellers__c</fullName>
    <defaultValue>0</defaultValue>
    <description>US-0006963 FVF. Campaign</description>
    <label>Total Number of Sellers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>