unpackaged/main/default/objects/Final_Value_Fee_FVF__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>US-0005908 Redirect Users to Custom Element (Inventory Diagnostic) for FVF Nomination.
DO NOT REMOVE FROM THE LAYOUT.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Identifier. Do not touch.</inlineHelpText>
    <label>Unique Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>