unpackaged/main/default/objects/Final_Value_Fee_FVF__c/recordTypes/FVF_Campaign.recordType-meta.xml
<RecordType>
    <fullName>FVF_Campaign</fullName>
    <active>true</active>
    <description>Request for the Final Value Fee Discount to multiple seller and for the specific range of existing listings. There will be a possibility to upload a list of sellers with proposed listings and target price later in the process.</description>
    <label>FVF (Campaign)</label>
</RecordType>