unpackaged/main/default/objects/Final_Value_Fee_FVF__c/recordTypes/FVF_Listing_Level.recordType-meta.xml
<RecordType>
    <fullName>FVF_Listing_Level</fullName>
    <active>true</active>
    <description>Request for the Final Value Fee Discount to one seller and for the specific range of existing listings. There will be a possibility to upload a list of proposed listings later in the process.</description>
    <label>FVF (Listing Level)</label>
</RecordType>