unpackaged/main/default/objects/Final_Value_Fee_FVF__c/recordTypes/FVF_Seller_Level.recordType-meta.xml
<RecordType>
    <fullName>FVF_Seller_Level</fullName>
    <active>true</active>
    <description>(ONLY FOR UK)  Request for the Final Value Fee Discount to one sellers and for all listings that seller will sell during the FVF period.</description>
    <label>FVF (Seller Level)</label>
</RecordType>