unpackaged/main/default/objects/Final_Value_Fee_FVF__c/recordTypes/Seller_Communication.recordType-meta.xml
<RecordType>
    <fullName>Seller_Communication</fullName>
    <active>true</active>
    <description>US-0011862 - Prevent and warn users from adding more than 10.000 Nominated Items to FVF</description>
    <label>Seller Communication (depreciate)</label>
</RecordType>