unpackaged/main/default/objects/Final_Value_Fee_FVF__c/validationRules/FVF_Seller_Level_Discount_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>FVF_Seller_Level_Discount_Values</fullName>
    <active>true</active>
    <description>US-0007838 - [UK] create FVF (seller level) page layout</description>
    <errorConditionFormula>AND(RecordType.DeveloperName =&#39;FVF_Seller_Level&#39;, Primary_Site__c =&#39;UK&#39;,NOT(OR(Discount_FVF__c = 0.25, Discount_FVF__c  = 0.5, Discount_FVF__c  = 0.75)))</errorConditionFormula>
    <errorMessage>You can only set the values to 25%, 50% or 75%</errorMessage>
</ValidationRule>