unpackaged/main/default/objects/Final_Value_Fee_FVF__c/validationRules/FVF_Seller_Level_Submit_Approval_7Days.validationRule-meta.xml
<ValidationRule>
    <fullName>FVF_Seller_Level_Submit_Approval_7Days</fullName>
    <active>true</active>
    <description>US-0009110 - Block submission to approval if campaign starts in less than 7 days.</description>
    <errorConditionFormula>AND (
   ISPICKVAL(Final_Value_Fee_Stage__c, &#39;Sent_to_eBay_Approval&#39;),
   RecordType.DeveloperName =&#39;FVF_Seller_Level&#39;,
   Start_Date_w__c - TODAY() &lt;= 7
)</errorConditionFormula>
    <errorMessage>Please change the Start Date of your campaign. You cannot submit a Seller Level FVF campaign that starts in less than 7 days.</errorMessage>
</ValidationRule>