unpackaged/main/default/objects/Final_Value_Fee_FVF__c/validationRules/Prevent_Contract_Declined.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Contract_Declined</fullName>
    <active>true</active>
    <description>US-0009242 - FVF : new stage and fields for seller declining promo</description>
    <errorConditionFormula>IF(AND(OR(
        Not($Setup.byPass__c.ByPass_Validation__c),
        AND($Setup.byPass__c.ByPass_Validation__c,       
            CONTAINS($Setup.byPass__c.triggerObjects__c, 
                     &#39;Final_Value_Fee_FVF__c&#39;) = false) 
        ), 
       OR(RecordType.DeveloperName = &#39;FVF_Listing_Level&#39;, 
           RecordType.DeveloperName = &#39;FVF_Seller_Level&#39;),
       Start_Date_w__c  &lt;  TODAY(),
       ISCHANGED(Final_Value_Fee_Stage__c), 
       ISPICKVAL( Final_Value_Fee_Stage__c , &#39;Contract Declined&#39;)
), 
TRUE, FALSE)</errorConditionFormula>
    <errorMessage>The Final Value Fee promo has already started or ended, therefore the status cannot be set to &quot;Contract Declined&quot;</errorMessage>
</ValidationRule>